pixmaps_DATA = upnp-device.png 		 \
	       upnp-service.png 	 \
	       upnp-state-variable.png   \
	       upnp-action-arg-in.png    \
	       upnp-action-arg-out.png   \
	       network-light-on.png 	 \
	       network-light-off.png 	 \
	       network-light-256x256.png \
	       network-light-22x22.png   \
	       media-renderer.png	 \
	       universal-cp.png 	 \
	       av-cp.png

pixmapsdir = $(datadir)/gupnp-tools/pixmaps

EXTRA_DIST = $(pixmaps_DATA)

MAINTAINERCLEANFILES = Makefile.in
