pixmaps_DATA = upnp-device.png 		\
	       upnp-service.png 	\
	       upnp-state-variable.png  \
	       upnp-state-variables.png \
	       network-light-on.png 	\
	       network-light-off.png 	\
	       network-light.png

pixmapsdir = $(datadir)/gupnp-tools/pixmaps

EXTRA_DIST = $(pixmaps_DATA)

