executable('gupnp-upload',
           ['main.c',
            'transfer.c',
            'container-search.c',
            'item-creation.h',
            'main.h',
            'transfer.h',
            'container-search.h',
            'item-creation.c',
            'control_point.h',
            'control_point.c'],
        dependencies: [gupnp, gssdp, gupnp_av, gio, config_header],
        install: true,
        export_dynamic : true)
